Update entity of documents